pilot_docustore/frontend/manifests/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: docustore-frontend
spec:
  selector:
    app: docustore-frontend
  ports:
    - name: docustore-frontend
      port: 3000
      targetPort: 3000
  clusterIP: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docustore-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docustore-frontend
  template:
    metadata:
      labels:
        app: docustore-frontend
    spec:
      containers:
      - name: docustore-frontend-container
        image: pathogen/docustore-frontend:v0.1.4
        command: ["node", ".output/server/index.mjs"]
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        securityContext:
          runAsNonRoot: true
          runAsUser: 1000
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
      securityContext:
        fsGroup: 2000
